# varGWAS

./: .dockerignore  .gitignore  BgenParser.cpp  CMakeLists.txt  Dockerfile  DosageSetter.h  JLSP.cpp  JLSP.h  LICENSE  ProbSetter.cpp  ProbSetter.h  README.md  absresi2.R  dosage  lib.sh  main.cpp  mkdocs.yml  pheno
.github/workflows/: release.yml  test.yml
docs/: 404.html  index.html  search.html  sitemap.xml
docs/install/: index.html
docs/search/: search_index.json
docs/tutorial/: index.html
docs/usage/: index.html
mkdocs/: index.md  install.md  tutorial.md  usage.md
sim/: Dockerfile  HC0.R  README.md  Singularity.def  absresi.R  absresi2.R  bs-mean.R  delta_manual.R  funs.R  osca.R  performance_plot.R  power.R  power_plot.R  runR.sh  runSim.sh  sim.R  sim.sh  sim1.R  sim10.R  sim11.R  sim12-delta.R  sim12.R  sim12_plot.R  sim12_plot_delta.R  sim12b.R  sim13.R  sim14.R  sim15.R  sim15a.R  sim15b.R  sim15c.R  sim16.R  sim17.R  sim18.R  sim19.R  sim1_plot.R  sim1b.R  sim2.R  sim20.R  sim2b.R  (+10 more)
src/: BgenParser.cpp  BgenParser.h  CMakeLists.txt  CqrReg.cpp  CqrReg.h  DosageSetter.cpp  JLSP.cpp  JLSP.h  Model.cpp  Model.h  PhenotypeFile.cpp  PhenotypeFile.h  PhenotypeFileException.cpp  PhenotypeFileException.h  PlinkParser.cpp  PlinkParser.h  ProbSetter.cpp  ProbSetter.h  QRMM.cpp  QRMM.h  Result.cpp  Result.h  SynchronizedFile.cpp  SynchronizedFile.h  cqrReg.cpp  cqrReg.h  main.cpp
test/: AnovaTest.cpp  BgenTest.cpp  CMakeLists.txt  EigenTest.cpp  JLSPTest.cpp  LinRegTest.cpp  LineReaderTest.cpp  ModelTest.cpp  OpenmpTest.cpp  PhenotypeFileTest.cpp  PlinkTest.cpp  QuantRegTest.cpp  main.cpp  power_plot.R  sim.R
test/data/: CMakeLists.txt  data-outlier.csv  data.R  data.csv  example.R  example.bgen  example.bgen.bgi  example.csv  genotypes.gen  output.tsv  phenotype.R  regression.R  regression.csv  sim.R  sim.sh  test.bed  test.bgen  test.bgen.bgi  test.bim  validation.R
tests/: CMakeLists.txt  JLSPTest.cpp
